# Memory-Management-Simulator

./: .gitignore  Makefile  README.md
include/allocator/: physical_memory.h
include/cache/: cache.h
memory-simulator-gui/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: main.cpp
src/allocator/: physical_memory.cpp
src/cache/: cache.cpp
tests/: test.txt
